--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "electron-quick-start",
+  "name": "sosuke",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Sosuke - dekstop helper ofr kids",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "Sosuke"
   ],
-  "author": "GitHub",
+  "author": "Appteq",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^1.8.4"
